[workspace]
members = ["json_macro"]

[workspace.package]
authors = ["Lance Hart <me@lancehart.ca>"]
license-file = "LICENSE"

[package]
edition = "2021"
name = "json"
version = "1.1.3"
description = "A library for interacting with JSON"

authors = { workspace = true }
license-file = { workspace = true }

[dependencies]
json_macro = { path = "json_macro" }
