[workspace.package]
version = "2.0.0"
authors = ["Lance Hart <me@lancehart.ca>"]
edition = "2021"
description = "A library for interacting with JSON"
repository = "https://github.com/shipsimfan/lib-json"
license = "GPL-3.0-or-later"
publish = false

[package]
name = "json"

version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
data-format.git = "https://github.com/shipsimfan/lib-data-format"
